# src/controllers/review.controller.ts
@@ -1,4 +1,12 @@
-import { Controller, Route, Tags } from "tsoa";
-@Route("reviews")
-@Tags("Reviews")
-export class ReviewController extends Controller {}
+import { Controller, Get, Route, Tags } from 'tsoa';
+import { ReviewDTO } from '../dto/review.dto';
+import { reviewService } from '../services/review.service';
+
+@Route('reviews')
+@Tags('Reviews')
+export class ReviewController extends Controller {
+  @Get('/')
+  public async getAllReviews(): Promise<ReviewDTO[]> {
+    return reviewService.getAllReviews();
+  }
+}
